# LegalHub

./: .env.exemple  .gitignore  README.md  executavel.json  pyproject.toml  scriptestruturadearvore.py
docs/: deploy-atualizacao-vm.md
scripts/: build_release.py
src/: app.py
src/backend/: api.py  engine.py  remote_client.py  webview_api.py
src/desktop/: __init__.py  version.py
src/docs/: Conformidade  - RPV.docx  MODELO JUNTADA.docx  MODELO RELATORIO.docx  Pet Inicial modelo para IA.docx  modelo_excel.xlsx  modelo_excel_parceiro.xlsx  modelo_excel_robo.xlsx  modelo_lotes.xlsx
src/services/Analise_pastas/backend/: api.py  corrigir_numeracao.py  preencher_codigo_beline.py  preencher_excel_parceiro.py  preencher_pastas.py  renomear_pastas.py
src/services/Analise_pastas/frontend/: analise_de_pastas.html  analise_de_pastas.js
src/services/AnalistDuplic/backend/: analisduplic_serveco.py
src/services/AnalistDuplic/frontend/: analisduplic.html  analistduplic.js
src/services/ExitoBot/backend/: exitobot_servico.py
src/services/ExitoBot/frontend/: exitobot.html  exitobot.js
src/services/Gerador_lotes/backend/: api.py  lotes_service.py
src/services/Gerador_lotes/frontend/: gerador_lotes.html  gerador_lotes.js
src/services/IA_LAUDO/backend/: ialaudos.py
src/services/IA_LAUDO/frontend/: ialaudos.html  ialaudos.js
src/services/IA_PET_INICIAL/backend/: iapet.py
src/services/IA_PET_INICIAL/frontend/: ia-pet-inicial.html  (+1 more)
src/web/js/: app.js  login.js
src/web/pages/: desenvolvimento.html  index.html  login.html
temp_PET/: gui.py  main.py
(+14 files in other folders)
