[project]
name = "teste-pywebview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "document>=1.0",
    "docx>=0.2.4",
    "fastapi>=0.128.0",
    "ldap3>=2.9.1",
    "numpy>=2.4.1",
    "openai>=2.18.0",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "pywebview>=6.1",
    "pywin32>=311",
    "requests>=2.32.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.46.0",
    "pyinstaller>=6.17.0",
]
